--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,28 @@
-@(message: String)
+@(projects: List[Project], todoTasks: List[Task])
 
-@main("Welcome to Play") {
+@main(projects) {
+ 
+   <header>
+      <hgroup>
+         <h1>Dashboard</h1>
+         <h2>Task over all projects</h2>
+      </hgroup>
+   </header>
 
-   <h1>@message</h1>
+   <article class="tasks">
+      @todoTasks.groupBy(_.project).map {
+         case (project, tasks) => {
+            <div class="folder" data-folder-id="@project.id">
+               <header>
+                  <h3>@project.name</h3>
+               </header>
+               <ul class="list">
+                  @tasks.map { task => 
+                     @views.html.tasks.item(task)
+                  }
+               </ul>
+            </div>
+         }
+      }
+   </article>
 }
