--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -37,6 +37,11 @@
                         @form.globalError.message
                      </p>
                   }
+                  @if(flash.contains("success")) {
+                     <p class="alert alert-success">
+                        @flash.get("success")
+                     </p>
+                  }
                   <!--
                   <p>
                      <input type="email" name="email" placeholder="Email" value="@form("email").value"/>
