change main template to use AdminLTE style

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,9 @@
 @(projects: List[Project], todoTasks: List[Task], user: models.User)
 
 @main(projects, user) {
- 
-   <header>
+
+   <!-- 
+   <header class="header">
       <hgroup>
          <h1>Dashboard</h1>
          <h2>Task over all projects</h2>
@@ -25,4 +26,5 @@
          }
       }
    </article>
+   -->
 }
