--- a/app/views/projects/item.scala.html
+++ b/app/views/projects/item.scala.html
@@ -1,7 +1,6 @@
 @(project: Project)
 
 <li data-project="@project.id">
-   <a class="name" href="#">@project.name</a>
-   <button class="delete" href="#">Delete</button>
-   <span class="loader">Loading</span>
+   <a class="name" href="#"><i class="fa fa-angle-double-right"></i> @project.name</a>
+   <!--<button class="delete" href="#">Delete</button>-->
 </li>
