--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,31 +4,139 @@
 
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <title>Zentasks</title>
+        <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'/>
+        <!--
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")"/>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")"/>
+        -->
+        <!-- bootstrap 3.0.2 -->
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/bootstrap.min.css")"/>
+        <!-- font awesome -->
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/font-awesome.min.css")"/>
+        <!-- Ionicons -->
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/ionicons.min.css")"/>
+        <!-- Theme style -->
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("css/AdminLTE.css")"/>
+
+        <!-- jQuery 2.0.2 -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <!-- jQuery UI 1.10.3 -->
+        <script src="@routes.Assets.at("js/jquery-ui-1.10.3.min.js")" type="text/javascript"></script>
+        <!-- Bootstrap -->
+        <script src="@routes.Assets.at("js/bootstrap.min.js")" type="text/javascript"></script>
+        <!-- AdminLTE App -->
+        <script src="@routes.Assets.at("js/AdminLTE/app.js")" type="text/javascript"></script>
     </head>
-    <body>
-        <header>
-           <a href="@routes.Application.index" id="logo"><span>Zen</span>tasks</a>
-           <dl id="user">
-              <dt>@user.name <span>(@user.email)</span></dt>
-              <dd>
-                 <a href="@routes.Application.logout()">Logout</a>
-              </dd>
-           </dl>
+    <body class="skin-blue">
+        <header class="header">
+           <a href="@routes.Application.index" class="logo">
+              <span>Zen</span>tasks
+           </a>
+           <!-- Header Navbar: style can be found in header.less -->
+           <nav class="navbar navbar-static-top" role="navigation">
+              <!-- sidebar toggle button -->
+              <a href="#" class="navbar-btn sidebar-toggle" data-toggle="offcanvas" role="button">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+              </a>
+              <div class="navbar-right">
+                 <ul class="nav navbar-nav">
+                    <!-- Tasks: style can be found in dropdown.less -->
+                    <li class="dropdown tasks-menu">
+                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <i class="fa fa-tasks"></i>
+                          <span class="label label-danger">9</span>
+                       </a>
+                       <ul class="dropdown-menu">
+                          <li class="header">You have 9 tasks</li>
+                          <li>
+                             <!-- inner menu: contains the actual data -->
+                             <ul class="menu">
+                                <li><!-- Task item -->
+                                   <a href="#">
+                                      <h3>Design some buttons<small class="pull-right">20%</small></h3>
+                                      <div class="progress xs">
+                                         <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                            <span class="sr-only">20% Complete</span>
+                                         </div>
+                                      </div>
+                                   </a>
+                                </li><!-- end task item-->
+                             </ul>
+                          </li>
+                          <li class="footer"><a href="#">View all tasks</a></li>
+                       </ul>
+                    </li>
+                    <!-- User Account: style can be found in dropdown.less -->
+                    <li class="dropdown user user-menu">
+                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <i class="glyphicon glyphicon-user"></i>
+                          <span>@user.name (@user.email) <i class="caret"></i></span>
+                       </a>
+                       <ul class="dropdown-menu">
+                          <!-- User image -->
+                          <li class="user-header bg-light-blue">
+                             <img src="@routes.Assets.at("img/tux.png")" class="img-circle" alt="User Image"/>
+                             <p>@user.name<small>@user.email</small></p>
+                          </li>
+                          <!-- Menu body -->
+                          <li class="user-body">
+                             <div class="col-xs-4 text-center">
+                                <a href="#">Followers</a>
+                             </div>
+                          </li>
+                          <!-- Menu footer -->
+                          <li class="user-footer">
+                             <div class="pull-left">
+                                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                             </div>
+                             <div class="pull-right">
+                                <a href="@routes.Application.logout()" class="btn btn-default btn-flat">Sign out</a>
+                             </div>
+                          </li>
+                       </ul>
+                    </li>
+                 </ul>
+              </div>
+           </nav>
         </header>
-        <nav>
-           <h4 class="dashboard"><a href="#/">Dashboard</a></h4>
-           <ul id="projects">
-              @projects.groupBy(_.folder).map {
-                 case (group, projects) => {
-                    @views.html.projects.group(group, projects)
-                 }
-              }
-           </ul>
-        </nav>
+        <div class="wrapper row-offcanvas row-offcanvas-left">
+           <!-- Left side column. contains the logo and sidebar -->
+           <aside class="left-side sidebar-offcanvas">
+              <!-- sidebar: style can be found in sidebar.less -->
+              <section class="sidebar">
+                 <!-- sidebar user panel -->
+                 <div class="user-panel">
+                    <div class="pull-left image">
+                       <img src="@routes.Assets.at("img/tux.png")" class="img-circle" alt="User Image" />
+                    </div>
+                    <div class="pull-left info">
+                       <p>Hello, @user.name</p>
+                       <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    </div>
+                 </div>
+                 <!-- sidebar menu -->
+                 <ul class="sidebar-menu">
+                    <li class="active">
+                       <a href="@routes.Application.index()">
+                          <i class="fa fa-dashboard"></i><span> Dashboard</span>
+                       </a>
+                    </li>
+                    @projects.groupBy(_.folder).map {
+                       case (group, projects) => {
+                          @views.html.projects.group(group, projects)
+                       }
+                    }
+                 </ul> 
+              </section>
+           </aside>
+        </div>
         <section id="main">
            @body
         </section>
