--- a/app/views/projects/group.scala.html
+++ b/app/views/projects/group.scala.html
@@ -1,9 +1,13 @@
 @(group: String, projects: List[Project])
 
-<li data-group="@group">
-   <span class="toggle"></span>
-   <h4 class="groupName">@group</h4>
-   <span class="loader">Loading</span>
+<li class="treeview" data-group="@group">
+   <!--<span class="toggle"></span>-->
+   <!--<h4 class="groupName">@group</h4>-->
+   <a href="#">
+      <i class="fa fa-table"></i><span> @group</span>
+      <i class="fa fa-angle-left pull-right"></i>
+   </a>
+   <!--
    <dl class="options">
       <dt>Options</dt>
       <dd>
@@ -11,7 +15,8 @@
          <button class="deleteGroup">Remove Group</button>
       </dd>
    </dl>
-   <ul>
+   -->
+   <ul class="treeview-menu">
       @projects.map { project =>
          @views.html.projects.item(project)
       }
